# delivery-optimization-ai

./: .gitignore  Dockerfile  README.md  app.py  eval_results_all.json  eval_results_p1.json  eval_results_p2.json  eval_results_p3.json  evaluate.py  inference.py  openenv.yaml  output.txt  pyproject.toml  requirements.txt  server.py  start.sh  test_env.py  test_ppo.py  train_ppo.py  visualize.py
agent/: baseline.py
env/: environment.py  grader.py  models.py  tasks.py  utils.py
logs/: custom_metrics.csv  metrics_p1.csv  metrics_p2.csv  metrics_p3.csv  monitor.csv  monitor_p1.monitor.csv  monitor_p2.monitor.csv  monitor_p3.monitor.csv
server/: app.py
test_logs/: monitor.csv
