[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delivery-optimization-env"
version = "1.0.0"
description = "OpenEnv-compliant RL environment for last-mile delivery optimization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "suhasd"},
]

dependencies = [
    "gymnasium>=0.29.0",
    "stable-baselines3[extra]>=2.1.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "gradio>=4.0.0",
    "pydantic>=2.0.0",
    "torch>=2.0.0",
    "Pillow>=10.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "openenv-core>=0.1.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
include = ["env*", "agent*", "server*"]
